Fix filter alignment

--- a/src/components/FilterButton/FilterButton.module.scss
+++ b/src/components/FilterButton/FilterButton.module.scss
@@ -4,10 +4,14 @@
 .container {
   display: flex;
   justify-content: flex-end;
-  margin: 10px;
+  margin-left: 10px;
+  margin-bottom: 10px;
   align-items: flex-end;
-  height: 12vh;
-  padding-right: 19px;
+  // padding-right: 19px;
+
+  .filter {
+    margin-left: 2rem;
+  }
 
   .filterContainer {
     display: flex;
@@ -17,7 +21,7 @@
     font-size: 30px;
     box-shadow: $shadow;
     color: $grey-secondary;
-    background-color: rgba(211, 211, 211, 0);
+    background-color: rgba(255, 255, 255, 0);
     padding: 1px;
   }
 
